fix(html): set overflow to overflow-x:hidden only

--- a/packages/css/scss/base/_all.sass
+++ b/packages/css/scss/base/_all.sass
@@ -14,9 +14,7 @@ html
   text-size-adjust: 100%
   -webkit-tap-highlight-color: transparent
   -webkit-overflow-scrolling: auto
-  overflow: scroll
   overflow-x: hidden
-  overflow-y: overlay
 
 *:focus
   -webkit-tap-highlight-color: transparent
